--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,17 @@ services:
       SERVICE_LINK_ATTRS_STANDARDIZER: http://host.docker.internal:8000
       SERVICE_LINK_UNIT_STANDARDIZER: http://host.docker.internal:8001
       SERVICE_LINK_SEMANTIC_MATCHER: http://host.docker.internal:8081
+      PG_POOL_SIZE: 20
+      PG_MAX_OVERFLOW: 30
     restart: unless-stopped
-    # Запускаем через main.py с API
+
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
+
+    sysctls:
+      - net.ipv4.tcp_keepalive_time=600
+      - net.ipv4.tcp_keepalive_intvl=60
+
     command: ["python", "-m", "uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
